# behavior-sense

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  PLAN.md  README.md  README_CN.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.claude/projects/d--Code-behavior-sense/: MEMORY.md
.claude/projects/d--Code-behavior-sense/memory/: feedback_ci_fix.md  feedback_commit.md  feedback_python.md  project_ci_config.md  project_overview.md  project_progress.md  user_role.md
.claude/skills/qa-evaluator/: SKILL.md
.claude/skills/qa-evaluator/assets/: report-template.md
.claude/skills/qa-evaluator/references/: backend.yaml  detection.yaml  frontend.yaml  fullstack.yaml
.claude/skills/qa-evaluator/scripts/: check_health.sh  detect_project.py
.github/workflows/: ci.yml
apps/web/: .env.development  .env.example  CODE_REVIEW_REPORT.md  IMPLEMENTATION_PLAN.md  QA_REPORT.md  components.json  jest.config.ts  jest.setup.ts  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml
apps/web/e2e/: app.spec.ts
apps/web/src/app/: error.tsx  layout.tsx  loading.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(dashboard)/: error.tsx  layout.tsx  loading.tsx  page.tsx
apps/web/src/app/(dashboard)/audit/: page.tsx
apps/web/src/app/(dashboard)/audit/order/[id]/: page.tsx
apps/web/src/app/(dashboard)/audit/todo/: page.tsx
apps/web/src/app/(dashboard)/insight/: page.tsx
apps/web/src/app/(dashboard)/insight/user/[id]/: page.tsx
apps/web/src/app/(dashboard)/logs/: page.tsx
apps/web/src/app/(dashboard)/mock/: page.tsx
apps/web/src/app/(dashboard)/monitor/: page.tsx
apps/web/src/app/(dashboard)/rules/: page.tsx
apps/web/src/app/(dashboard)/rules/[id]/: page.tsx
apps/web/src/app/(dashboard)/rules/create/: page.tsx
apps/web/src/app/api/auth/login/: route.ts
apps/web/src/components/audit/: audit-card.tsx  audit-detail.tsx  event-timeline.tsx  index.ts  review-form.tsx  status-badge.tsx
apps/web/src/components/dashboard/: index.ts  metric-card.tsx  pending-audits-list.tsx  recent-activity-list.tsx  service-status.tsx  trend-chart.tsx
apps/web/src/components/insight/: edit-tags-dialog.tsx  index.ts  risk-score.tsx  tag-badge.tsx  tag-statistics.tsx  user-profile.tsx  user-search.tsx
apps/web/src/components/layout/: header.tsx  index.ts  nav-item.tsx  sidebar.tsx
apps/web/src/components/mock/: active-scenarios-list.tsx  index.ts  live-event-stream.tsx  manual-generate-form.tsx  scenario-card.tsx
apps/web/src/components/rules/: action-editor.tsx  condition-builder.tsx  index.ts  rule-form.tsx  rule-list.tsx  rule-test-panel.tsx
apps/web/src/components/ui/: alert-dialog.tsx  badge.tsx  card.tsx  index.ts  input.tsx  progress.tsx  textarea.tsx  toast.tsx  use-toast.tsx
apps/web/src/components/ui/__tests__/: button.test.tsx
apps/web/src/lib/api/: audit.ts  client.ts  index.ts  insight.ts  logs.ts  mock.ts  rules.ts  utils.ts
apps/web/src/lib/auth/: protected.tsx
apps/web/src/lib/hooks/: index.ts  use-audit.ts  use-auth.ts  use-dashboard.ts  use-insight.ts  use-logs.ts  use-mock.ts  use-rules.ts
apps/web/src/lib/query/: provider.tsx
apps/web/src/lib/stores/: auth.ts  index.ts  ui.ts
apps/web/src/lib/utils/: date.ts  format.ts  index.ts
apps/web/src/lib/utils/__tests__/: utils.test.ts
apps/web/src/types/: api.ts  audit.ts  event.ts  index.ts  logs.ts  rule.ts  user.ts
behavior_audit/: __init__.py  main.py
behavior_audit/repositories/: __init__.py  audit_repo.py
behavior_audit/routers/: __init__.py  audit.py
behavior_core/: __init__.py
behavior_core/config/: settings.py
behavior_core/middleware/: __init__.py
behavior_core/models/: __init__.py  user.py
behavior_core/utils/: datetime.py
behavior_insight/: main.py
behavior_insight/repositories/: user_repo.py
behavior_insight/routers/: __init__.py
behavior_mock/: main.py  scenarios.py
behavior_rules/: engine.py  main.py
behavior_rules/actions/: __init__.py  audit.py  tagging.py
behavior_stream/: app.py
behavior_stream/jobs/: __init__.py  detection.py
behavior_stream/operators/: window.py
docker/: Dockerfile  init.sql  prometheus.yml
docs/: PRODUCTION_CHECKLIST.md  TEST_EXECUTION_REPORT.md  TEST_PLAN.md  deployment-plan.md
infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend
infrastructure/docker/compose/: base.yml  dev.yml  prod.yml  services.yml  test.yml
libs/core/: pyproject.toml
libs/core/src/behavior_core/: __init__.py  metrics.py
libs/core/src/behavior_core/config/: settings.py
libs/core/src/behavior_core/middleware/: __init__.py  rate_limit.py  tracing.py
libs/core/src/behavior_core/models/: __init__.py  event.py  user.py
libs/core/src/behavior_core/security/: __init__.py  auth.py  jwt.py
libs/core/src/behavior_core/utils/: datetime.py  logging.py
reports/: code_review_report.md  e2e_test_plan.md  e2e_test_summary.md  microservices_verification_report.md
reports/qa/: 20260404_153000_report.md
rules/: sample_rules.yaml
scripts/: run_api_tests.sh  run_tests.sh
tests/: conftest.py
tests/performance/: locustfile.py  run_perf_tests.sh
tests/test_api/: TEST_REPORT.md  __init__.py  conftest.py  test_audit_api.py  test_insight_api.py  test_mock_api.py  test_rules_api.py
tests/test_audit/: test_audit_service.py
tests/test_core/: test_models.py
tests/test_insight/: test_tag_service.py
tests/test_integration/: conftest.py  test_basic_integration.py  test_e2e_audit_flow.py  test_e2e_user_tagging.py  test_http_integration.py  test_integration.py  test_state_consistency.py
tests/test_mock/: test_generator.py
tests/test_rules/: test_engine.py
tests/test_stream/: test_window.py
wiki/: README.md  api.md  architecture.md  best-practices.md  deployment.md  frontend-console-plan.md  frontend-interaction-design.md  modules.md  technology.md
