[project]
name = "behavior-sense"
version = "1.0.0"
description = "User Behavior Stream Analytics Engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "BehaviorSense Team"}
]

dependencies = [
    # Web 框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # 消息队列
    "pulsar-client>=3.4.0",

    # 流处理
    "faust-streaming>=0.11.0",

    # 数据库
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",

    # 缓存
    "redis[asyncio]>=5.0.0",

    # ClickHouse
    "clickhouse-connect>=0.6.0",

    # HTTP 客户端
    "httpx>=0.26.0",

    # 序列化
    "orjson>=3.9.0",

    # 日志
    "structlog>=24.1.0",

    # 配置
    "python-dotenv>=1.0.0",

    # 工具
    "tenacity>=8.2.0",
    "prometheus-client>=0.19.0",

    # 安全
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["behavior_core", "behavior_mock", "behavior_stream", "behavior_rules", "behavior_insight", "behavior_audit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
