[project]
name = "behavior-sense"
version = "1.0.0"
description = "User Behavior Stream Analytics Engine - Monorepo"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "BehaviorSense Team" }]

# 所有依赖集中管理
dependencies = [
    # Web 框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # 消息队列
    "pulsar-client>=3.4.0",

    # 流处理
    "faust-streaming>=0.11.0",

    # 数据库
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "aiomysql>=0.2.0",

    # 缓存
    "redis[asyncio]>=5.0.0",

    # ClickHouse
    "clickhouse-connect>=0.6.0",

    # HTTP 客户端
    "httpx>=0.26.0",

    # 序列化
    "orjson>=3.9.0",

    # 日志
    "structlog>=24.1.0",

    # 配置
    "python-dotenv>=1.0.0",

    # 工具
    "tenacity>=8.2.0",
    "prometheus-client>=0.19.0",
    "pyyaml>=6.0.0",

    # 安全
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# uv workspace 配置
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.uv.workspace]
members = [
    "libs/core",
    "packages/audit",
    "packages/insight",
    "packages/mock",
    "packages/rules",
    "packages/stream",
]

# 声明 workspace 内包的依赖源
[tool.uv.sources]
behavior-core = { workspace = true }
behavior-audit = { workspace = true }
behavior-insight = { workspace = true }
behavior-mock = { workspace = true }
behavior-rules = { workspace = true }
behavior-stream = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = [
    "libs/core/src/behavior_core",
    "packages/audit/src/behavior_audit",
    "packages/insight/src/behavior_insight",
    "packages/mock/src/behavior_mock",
    "packages/rules/src/behavior_rules",
    "packages/stream/src/behavior_stream",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = [
    "B008",  # FastAPI Depends uses function calls in argument defaults
    "B904",  # Exception chaining style (raise ... from)
    "B905",  # zip() strict parameter (Python 3.10+ feature)
    "N818",  # Exception naming convention (Error suffix)
    "UP042",  # StrEnum inheritance (requires Python 3.11+)
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
allow_any_generics = true
allow_untyped_defs = true
allow_untyped_calls = true
allow_incomplete_defs = true
allow_untyped_decorators = true
# Disable specific error codes for third-party library compatibility
disable_error_code = [
    "arg-type",
    "attr-defined",
    "assignment",
    "call-overload",
    "dict-item",
    "operator",
    "misc",
    "union-attr",
    "type-arg",
    "no-untyped-call",
    "import-untyped",
    "no-any-return",
    "no-untyped-def",
    "override",
    "valid-type",
    "unused-ignore",
    "untyped-decorator",
]

# Core library uses strict mode
[[tool.mypy.overrides]]
module = "behavior_core.*"
strict = true
disable_error_code = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
