[project]
name = "behavior-core"
version = "1.0.0"
description = "Shared core library for BehaviorSense"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "orjson>=3.9.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "prometheus-client>=0.19.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/behavior_core"]
